# wikibot

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: macros.rs  main.rs
